fix: table: border-collapse

--- a/css/style.css
+++ b/css/style.css
@@ -1246,7 +1246,7 @@ a {
 
 	box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
 	box-sizing: border-box;
-	border-spacing: 0;
+	border-collapse: collapse;
 }
 
 .cart tr {
